# OpenPARF

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  BENCHMARKS.md  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  PUBLICATIONS.md  README.md  openparf.py
cmake/: FindCairo.cmake  (+1 more)
docs/: CMakeLists.txt
fpga24contest/src/: CMakeLists.txt  main.cpp
fpga24contest/src/database/: pin.cpp  pin.h
fpga24contest/src/router/: net.cpp  net.h  path.cpp  path.h  pathfinder.cpp  pathfinder.h  pathfinderastar.cpp  pathfinderastar.h  routegraph.cpp  routegraph.h  router.cpp  router.h  routetree.cpp  routetree.h
fpga24contest/src/utils/: printer.cpp  printer.h  rtree.h  utils.h
openparf/: CMakeLists.txt  README.md  configure.py.in  flow.py  main.cpp  params.json  params.py  params_ispd.json
openparf/container/: README.md  container.hpp  fixed_size_pq.hpp  flat_nested_vector.hpp  index_wrapper.hpp  multi_dim_map.hpp  observer_ptr.hpp  spiral_accessor.hpp  vector_2d.hpp
openparf/custom_data/: CMakeLists.txt
openparf/custom_data/chain_info/: CMakeLists.txt
openparf/custom_data/ssr_chain_info/: CMakeLists.txt
openparf/database/: CMakeLists.txt  README.md  attr.cpp  attr.h  attr_object.hpp  clock_availability.h  clock_database.h  clock_region.cpp  clock_region.h  database.cpp  database.h  design.cpp  design.h  half_column_region.cpp  half_column_region.h  inst.cpp  inst.h  layout.cpp  layout.h  layout_map.hpp  model.cpp  model.h  module_inst.cpp  module_inst.h  net.cpp  net.h  netlist.hpp  object.cpp  object.h  pin.cpp  pin.h  placedb.cpp  placedb.h  resource.cpp  resource.h  shape_constr.cpp  shape_constr.h  site.cpp  site.h  site_type.cpp  (+3 more)
openparf/geometry/: README.md  box.hpp  geometry.hpp  point.hpp  size.hpp
openparf/io/: CMakeLists.txt  README.md
openparf/io/bookshelf/: CMakeLists.txt  bookshelf_database.h  bookshelf_driver.cpp  bookshelf_driver.h  bookshelf_parser.yy  bookshelf_scanner.h  bookshelf_scanner.ll
openparf/io/verilog/: CMakeLists.txt  VerilogParser.yy  VerilogScanner.ll
openparf/ops/: CMakeLists.txt  README.md  inst_cr_mover.py
openparf/ops/chain_alignment/: CMakeLists.txt  chain_alignment.py
openparf/ops/chain_legalizer/: CMakeLists.txt  chain_legalizer.py
openparf/ops/clock_network_planner/: CMakeLists.txt  clock_network_planner.py
openparf/ops/congestion_prediction/: CMakeLists.txt  congestion_prediction.py  model.py
openparf/ops/cr_ck_counter/: CMakeLists.txt  cr_ck_counter.py
openparf/ops/dct/: CMakeLists.txt  dct.py  discrete_spectral_transform.py
openparf/ops/delay_estimation/: CMakeLists.txt  delay_estimation.py
openparf/ops/density_map/: CMakeLists.txt  density_map.py
openparf/ops/direct_lg/: CMakeLists.txt  direct_lg.py
openparf/ops/electric_potential/: CMakeLists.txt  electric_potential.py
openparf/ops/energy_well/: CMakeLists.txt  energy_well.py
openparf/ops/fence_region_checker/: CMakeLists.txt  fence_region_checker.py
openparf/ops/hpwl/: CMakeLists.txt  hpwl.py
openparf/ops/io_legalizer/: CMakeLists.txt  io_legalizer.py
openparf/ops/ism_dp/: CMakeLists.txt  ism_dp.py
openparf/ops/legality_check/: CMakeLists.txt  legality_check.py
openparf/ops/masked_direct_lg/: CMakeLists.txt  masked_direct_lg.py
openparf/ops/mcf_lg/: CMakeLists.txt  mcf_lg.py
openparf/ops/move_boundary/: CMakeLists.txt  move_boundary.py
openparf/ops/pin_pos/: CMakeLists.txt  pin_pos.py
openparf/ops/pin_utilization/: CMakeLists.txt  pin_utilization.py
openparf/ops/raw_instance_area/: CMakeLists.txt  __init__.py  raw_instance_area.py
openparf/ops/resource_area/: CMakeLists.txt  resource_area.py
openparf/ops/rudy/: CMakeLists.txt  rudy.py
openparf/ops/sll/: CMakeLists.txt  sll.py
openparf/ops/soft_floor/: CMakeLists.txt  soft_floor.py
openparf/ops/ssr_abacus_lg/: CMakeLists.txt  ssr_abacus_lg.py
openparf/ops/stable_div/: CMakeLists.txt  stable_div.py
openparf/ops/static_timing_analysis/: CMakeLists.txt  static_timing_analysis.py
openparf/ops/utplace2_cnp/: CMakeLists.txt  utplace2_cnp.py  utplace2_cnp_torch.cpp
openparf/ops/wasll/: CMakeLists.txt  wasll.py
openparf/ops/wawl/: CMakeLists.txt  wawl.py
openparf/placement/: CMakeLists.txt  README.md  data_collections.py  draw_place.py  metric.py  nesterov.py  op_collections.py  place_model.py  placer.py  statistics_viewer.py
openparf/placement/functor/: __init__.py  adjust_inst_area.py  functor_collections.py
openparf/py_config/: rule.py
openparf/py_utils/: __init__.py  base.py  stopwatch.py
openparf/pybind/: CMakeLists.txt  blend2d.cpp  container.cpp  container.h  database.cpp  database.h  geometry.cpp  geometry.h  pybind.cpp  util.cpp  util.h
openparf/routing/: CMakeLists.txt  router.py
openparf/routing/fpga-router/: .gitignore  CMakeLists.txt  README.md  main.cpp
openparf/routing/src/: router.cpp
openparf/util/: CMakeLists.txt  README.md  arg.h  arith.h  atomic_ops.cuh  atomic_ops.h  cuda_error_check.h  data_traits.hpp  enums.h  extensible_enum.cpp  extensible_enum.h  limits.cuh  map-macro.h  message.cpp  message.h  namespace.h  torch.h  util.cuh  util.h
unittest/blend2d/: CMakeLists.txt  main.cpp  unittest_blend2d.cpp  unittest_blend2d.py
unittest/container/: CMakeLists.txt  flat_nested_vector_unittest.cpp  index_warpper_unittest.cpp  main.cpp  multi_dim_map_unittest.cpp
unittest/database/: CMakeLists.txt  database.cpp  main.cpp  unittest_database.py  unittest_placedb.py
unittest/ops/: CMakeLists.txt  unittest_dct.py  unittest_density_map.py  unittest_energy_well.py  unittest_fence_region_checker.py  unittest_hpwl.py  unittest_move_boundary.py  unittest_pin_pos.py  unittest_pin_utilization.py  unittest_rudy.py  unittest_sll.py  unittest_soft_floor.py  unittest_wasll.py  unittest_wawl.py
unittest/ops/clock_network_planner/: params.json  params.py  unittest_clock_network_planner.py
unittest/ops/electric_potential/: unittest_electric_potential.py
unittest/ops/resource_area/: .gitattributes  README.md  unittest_ff_ctrlsets.py  unittest_resource_area.py  util.py
unittest/regression/: CMakeLists.txt
(+411 files in other folders)
