if(DOXYGEN_FOUND)

set(DOXYGEN_GENERATE_HTML YES)
set(DOXYGEN_GENERATE_LATEX YES)
set(DOXYGEN_GENERATE_MAN NO)
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE ${PROJECT_SOURCE_DIR}/README.md)
#set(DOXYGEN_ALIASES nowarn="\\{" endnowarn="\\}")
set(DOXYGEN_SOURCE_BROWSER YES)
set(DOXYGEN_GENERATE_TREEVIEW YES)
set(DOXYGEN_IMAGE_PATH ${PROJECT_SOURCE_DIR}/images)

doxygen_add_docs(docs
    ${PROJECT_SOURCE_DIR}/README.md
    ${PROJECT_SOURCE_DIR}/openparf
    ${PROJECT_SOURCE_DIR}/unittest
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Generating API documentation with Doxygen"
  )

install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION docs OPTIONAL)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/images DESTINATION docs/html OPTIONAL)

endif(DOXYGEN_FOUND)
