add_subdirectory(hpwl)
add_subdirectory(wawl)
add_subdirectory(density_map)
add_subdirectory(dct)
add_subdirectory(electric_potential)
add_subdirectory(move_boundary)
add_subdirectory(pin_pos)
add_subdirectory(stable_div)
add_subdirectory(mcf_lg)
add_subdirectory(direct_lg)
add_subdirectory(rudy)
add_subdirectory(pin_utilization)
add_subdirectory(raw_instance_area)
add_subdirectory(ism_dp)
add_subdirectory(legality_check)
add_subdirectory(resource_area)
add_subdirectory(energy_well)
add_subdirectory(fence_region_checker)
add_subdirectory(clock_network_planner)
add_subdirectory(cr_ck_counter)
add_subdirectory(utplace2_cnp)
add_subdirectory(io_legalizer)
add_subdirectory(chain_alignment)
add_subdirectory(chain_legalizer)
add_subdirectory(congestion_prediction)
add_subdirectory(delay_estimation)
add_subdirectory(static_timing_analysis)
add_subdirectory(masked_direct_lg)
add_subdirectory(ssr_abacus_lg)
add_subdirectory(sll)
add_subdirectory(wasll)
add_subdirectory(soft_floor)

file(GLOB INSTALL_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.py")
install(FILES ${INSTALL_SRCS} DESTINATION openparf/ops)
